index & css changes by Wati

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <!--Font awesome link-->
 </head>
 <body>
-    
+    <div class="topnav">
+
+    </div>
+    <div class="header">
+
+    </div>
+    <div class="footer">
+        
+    </div>
 </body>
 </html>
