--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
     <title>Music App</title>
     <link rel="stylesheet" href="CSS/style.css">
     <!-- Favicon -->
+    <script src="https://kit.fontawesome.com/d4869d89c4.js" crossorigin="anonymous"></script>
     <!-- Font-->
     <!--Font awesome link-->
 </head>
 <body>
     <div class="topnav">
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
 
     </div>
-    <div class="header">
+    <div class="row">
+        <div class="column">Left Side</div>
+        <div class="column">Right Side</div>
 
     </div>
     <div class="footer">
-        
+        <h2>footer</h2>
     </div>
 </body>
 </html>
