--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="login.html">Login</a>
-        <a href="signup.html">Sign Up</a>
+        <ul>
+            <li>
+                <a href="login.html">Login</a>
+            </li>
+            <li>
+                <a href="signup.html">Sign Up</a>
+            </li>
+        </ul>
 
     </div>
     <div class="row">
-        <div class="column">Left Side</div>
-        <div class="column">Right Side</div>
+        <div class="leftcolumn">
+            <h1>Jango</h1>
+        </div>
+        <div class="rightcolumn">Trending satation</div>
 
     </div>
     <div class="footer">
