--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
         </div> 
         <div class="content">
-            <h1>Music Website & <br><span>DESIGN</span> <br>Course</h1>
+            <h1>Music Website & <br><span>design</span> <br>Course</h1>
             <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
                  expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
                 <br> a quae totam ipsa illum minus laudantium?</p>
 
-                <button class="cn"><a href="#">JOIN US</a></button>
+                <button class="cn"><a href="music.html">JOIN US</a></button>
 
                 <div class="form">
                     <h2>Login Here</h2>
@@ -59,5 +59,4 @@
         </div>
     </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-</body>
-</html>
+  
