--- a/music.html
+++ b/music.html
@@ -3,6 +3,7 @@
   <head>
     <title>Music Website</title>
     <link rel="stylesheet" href="music.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
