--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 <button class="cn"><a href="music.html">JOIN US</a></button>
 
                 <div class="form">
-                    <h2>Login Here</h2>
-                    <input type="email" name="email" placeholder="Enter Email Here">
-                    <input type="password" name="" placeholder="Enter Password Here">
+                    <h2>Login</h2>
+                    <input type="email" name="email" placeholder="Enter Email">
+                    <input type="password" name="" placeholder="Enter Password">
                     <button class="btnn"><a href="#">Login</a></button>
 
                     <p class="link">Don't have an account<br>
-                    <a href="#">Sign up </a> here</a></p>
+                    <a href="#">Sign up</p>
                     <p class="liw">Log in with</p>
 
                     <div class="icons">
