--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">Fuchsia</h2>
+                <a href="index.html"><img src="images/musiclogo.png" alt="Logo" width="100px" height="100px" style="border-radius: 50%;padding:20px;"></a>
+
             </div>
 
             <div class="menu">
