--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="service.html">SERVICE</a></li>
                     <li><a href="contant.html">CONTACT</a></li>
