--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@
     <div class="navigation">
       <ul>
         <li>
-          <a href="#">
+          <a href="index.html">
             <span class="fa fa-home"></span>
             <span>Home</span>
           </a>
@@ -70,10 +70,7 @@
   </div>
 
   <div class="main-container">
-    <div class="topbar">
-      <div class="prev-next-buttons">
-        <a href="index.html" class="fa fas fa-chevron-left">Back</a>
-      </div>
+    <div class="topbar">     
 
       <div class="navbar">
         <ul>
