--- a/music.html
+++ b/music.html
@@ -75,20 +75,20 @@
       <div class="navbar">
         <ul>
           <li>
-            <a href="#">Premium</a>
+            <a href="#"></a>
           </li>
           <li>
-            <a href="#">Support</a>
+            <a href="#"></a>
           </li>
           <li>
-            <a href="#">Download</a>
+            <a href="#"></a>
           </li>
           <li class="divider">|</li>
           <li>
-            <a href="#">Sign Up</a>
+            <a href="signup.html">Sign Up</a>
           </li>
         </ul>
-        <button class="cn"><a href="login.html">Login</a></button>
+        <button class="cn"><a href="login.html">Login</a></sinutton>
       </div>
     </div>
 
