--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <title>Music Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <a href="index.html"><img src="images/musiclogo.png" alt="Logo" width="100px" height="100px" style="border-radius: 50%;padding:20px;"></a>
-
+                <h2 class="logo">MusicLover</h2>
             </div>
 
             <div class="menu">
@@ -22,29 +20,21 @@
                     <li><a href="contant.html">CONTACT</a></li>
                 </ul>
             </div>
-
-            <div class="search">
-                <input class="srch" type="search" name="" placeholder="Type To text">
-                <a href="#"> <button class="btn">Search</button></a>
-            </div>
-
         </div> 
         <div class="content">
-            <h1>Music Website & <br><span>design</span> <br>Course</h1>
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
-                 expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
-                <br> a quae totam ipsa illum minus laudantium?</p>
+            <h1>Music Website </h1>
+            <p class="par">This is our Music Website.<br> If you want to listen a song click the join now</p>
 
-                <button class="cn"><a href="music.html">JOIN US</a></button>
+                <button class="cn"><a href="music.html">JOIN NOW</a></button>
 
                 <div class="form">
-                    <h2>Login</h2>
+                    <h2>Login </h2>
                     <input type="email" name="email" placeholder="Enter Email">
                     <input type="password" name="" placeholder="Enter Password">
                     <button class="btnn"><a href="#">Login</a></button>
 
                     <p class="link">Don't have an account<br>
-                    <a href="#">Sign up</p>
+                    <a href="signup.html">Sign up </a> </a></p>
                     <p class="liw">Log in with</p>
 
                     <div class="icons">
